db integration